--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,17 @@
+@font-face {
+  font-family: 'Maven Pro';
+  src: url('./fonts/MavenPro-Regular.woff2') format('woff2'),
+      url('./fonts/MavenPro-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
+  margin: 0;
+  font-family: 'Maven Pro';
+}
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +23,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
